# effective-sniffle

./: .gitignore  .travis.yml  Cargo.toml  README.md  effective-sniffle.sublime-project
src/: main.rs  options.rs
src/par/: ast.rs  mod.rs  parse.rs  parse_grammar.lalrpop
test/: expr.ef  trivial.ef
