[package]
name = "effective-sniffle"
description = "A language with a compiler"
repository = "https://github.com/nabijaczleweli/chattium-oxide-client"
readme = "README.md"
keywords = ["language", "compiler"]
license = "MIT"
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.11.0"

[dependencies]
clap = "2.3"
lalrpop-util = "0.11.0"
