[package]
name = "effective-sniffle"
description = "A language with a compiler"
repository = "https://github.com/nabijaczleweli/chattium-oxide-client"
readme = "README.md"
keywords = ["language", "compiler"]
license = "MIT"
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
clap = "2.11"
nom = "1.2"
